// $Id: CHANGELOG.txt,v 1.1.2.11 2009/07/03 07:06:50 deciphered Exp $

FileField Paths 6.x-1.x-dev, xxxx-xx-xx (development release)
-----------------------------------


FileField Paths 6.x-1.3, 2009-07-03
-----------------------------------

- #494830: Added support for FileField Sources.
- #488264: Added ImageField Crop module support.
- #485528: Fixed issue with Content Type names containing spaces.
- #480580 by Ralf: Fixed undefined indexes.
- #478924: Updated README.TXT documentation.
- #473368: Fixed issue with Pathauto cleanup removing slashes from paths.
- #466412: Fixed issue with Upload module when CCK not installed.
- #465848: Added support for the Comment Upload module.
- #457956 by jshprentz: Added schema change information.
- by libeco: Added Dutch translation.
- by wulff: Added Danish translation.
- Added support for the Image module.
- Added SimpleTests.
- Added translation template.


FileField Paths 6.x-1.2, 2009-05-01
-----------------------------------

- #447794: Updated ImageField thumbnail support.
- #434038: Added Batch process for 'Retroactive updates' (previously 'Retroactive changes').
- #428542 by k4ml: Fixed PostgreSQL issue.
- #311526: Fixed recursion error.
- Added CHANGELOG.txt and README.txt.
- Added original filename tokens.
- Added original filename in {files} table.
- Changed default File name replacement value.
- Updated API Hooks - minor change, implemented one default value.
- Fixed issue with new tokens when 'origname' field is empty.


FileField Paths 6.x-1.1, 2009-04-07
-----------------------------------

- #399318: Fixed issue with ImageField module support.
- #398754: Fixed issue with Transliteration module support.
- #373735: Added ability to replace encoded unprocessed URLs.
- #366997: Fixed multiple PHP notices.
- #363105: Fixed SQL error.
- #360303: Fixed translation issues.
- #331488 by Moonshine: Added error checking.
- #324736: Added temporary workaround for token values as array issue.