@@ -1,7 +1,14 @@
-// $Id: CHANGELOG.txt,v 1.1.2.11 2009/07/03 07:06:50 deciphered Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.15 2009/08/02 23:22:33 deciphered Exp $
 
 FileField Paths 6.x-1.x-dev, xxxx-xx-xx (development release)
 -----------------------------------
+
+- #536384: Fixed transliteration support.
+- #525354: Fixed implementations of hook_filefield_paths_get_fields().
+- #522678 by chrisirhc: Fixed issue with Filepath variable and ImageField Crop.
+- #515044: Fixed [filefield-onlyname-original] token for PHP > 5.2.
+- Improved replace of unprocessed URLs for FileField Insert.
+- Added support for the Audio module.
 
 
 FileField Paths 6.x-1.3, 2009-07-03
